第二次提交

--- a/Jelly/app/src/main/res/values/strings.xml
+++ b/Jelly/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Jelly</string>
+    <string name="draw_open">open</string>
+    <string name="draw_close">close</string>
 </resources>
